minor editing to html

--- a/chinatown.html
+++ b/chinatown.html
@@ -49,25 +49,25 @@
         <h2> Although it is famous for seafood, like walnut shrimp, lobster with ginger and scallions, deep-fried flounder, the restaurant also serves traditional Cantonese, Hong Kong, and Szechuan cuisines.</h2>
     </div> 
     <div class="walk-through">
-        <p> When I walked inside Asian Garden on a late Friday afternoon, I saw people eating late lunches and early dinners around round tables. Colorful dividers were placed between tables to promote social distancing. A Chinese drama blared from a small, propped television. The bell notifying incoming customers enter would occasionally ring. </p>
+        <p> When I walked inside Asian Garden on a late Friday afternoon, I saw people eating late lunches and early dinners around round tables. Colorful dividers are placed between tables to promote social distancing. A Chinese drama blared from a small, propped television. The bell notifying incoming customers to enter would occasionally ring. </p>
         <figure class="inside-restaurant">
             <img class="inside1" src="assets/inside of restaurant.png" alt="inside of the restaurant with dividers"> 
-            <figcaption class="inside-caption"> inside of asian garden </figcaption>
+            <figcaption class="inside-caption"> Inside of Asian Garden </figcaption>
         </figure>
-        <p> However, business was still stagnant and it was clear that the small family-owned restaurant was struggling to keep up against the brunt of the pandemic and the increasing rise of Asian hate crimes. </p>
+        <p> However, business was still stagnant, and it was clear that the small family-owned restaurant was struggling to keep up against the brunt of the pandemic and the increasing rise of Asian hate crimes. </p>
     </div>
     <div class="profile">
      <h3> About the Business Owner </h3>
      <div class="owner-pic">
         <img class="owner" src="assets/ownerkawawstars.png" alt="picture of business owner kawa with star decorations">
      </div>
-     <p> The owner's name of Asian Garden is Ka Wa. He immigrated from Hong Kong in 1993. Shortly after, he started his business and has been working with his family ever since.</p>
-     <p> When I asked him why he started his restaurant, he responded <span>“Because cooking is my passion”</span>.</p>
-     <p> During our phone interview, he kindly shared his experiences with me. Occasionally, he would call out an order for the kitchen to take. I could tell he was a busy man who worked extremely hard. </p>
+     <p> The owner's name of Asian Garden is KaWa. He immigrated from Hong Kong in 1993. Shortly after, he started his business and has been working with his family ever since.</p>
+     <p> When I asked him why he started his restaurant, he responded,<span>“Because cooking is my passion.”</span></p>
+     <p>During our phone interview, he kindly shared his experiences with me. Occasionally, he would call out an order for the kitchen to take. I could tell he was a busy man who worked extremely hard.</p>
     </div>
     <div class="impact">
      <h3> Struggling with Multiple Pandemics </h3>
-     <p> During our phone interview, KaWa noted that there was a <span>50%</span> decrease in business due to the pandemic.</p>
+     <p> During our phone interview, KaWa noted a <span>50%</span> decrease in business due to the pandemic.</p>
      <p> Although the state government provided funding to keep workers in local businesses employed through the Paycheck Protection Program (PPP), there was still not enough business to hire workers back. </p>
      <p>KaWa believes that the rise of hate crimes against Asian-Americans due to broader rhetoric about Asian-Americans being responsible for carrying the disease has contributed to the loss in revenue. </p> 
      <div class="poc-statistics"> 
@@ -77,7 +77,7 @@
          <h4>Hate crimes are largely undercounted due to language barriers, mistrust with authorities, and reluctancy to speak up.<a href="https://abcnews.go.com/US/anti-asian-hate-incidents-unreported/story?id=76509072" rel="footnote">3</a></h4>
     </div>
      <p> In addition, KaWa has encountered acts of discrimination. People would call the restaurant to direct racial slurs and expletives at the owner. They would also order food but purposely refuse to pick it up, which resulted in wasted food and expenses.</p>
-     <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year. Despite installing security systems, he would come back to smashed restaurant windows. Kawa has hope that Asian Garden will bounce back, but the road to normalcy is going to be long and stressful. </p>
+     <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year. Despite installing security systems, he would come back to smashed restaurant windows. KaWa has hope that Asian Garden will bounce back, but the road to normalcy will be long and stressful. </p>
     </div> 
 
          <!-- carousel starts -->
@@ -98,7 +98,7 @@
         <figure class="takeout-block">
             <img class="takeout" src="assets/IMG_3527 2.png"
                 alt="picture of walnut shrimp and stir fry beef with pepper takeout">
-            <figcaption class="take-out-caption"> walnut shrimp and stir fry beef with peppers</figcaption>
+            <figcaption class="take-out-caption"> Walnut shrimp and stir fry beef with peppers</figcaption>
         </figure>
         <ul class="rest-support-list">
             <li class="list-support">Get your next meal from Asian Garden. Browse their menu and order online or
@@ -143,7 +143,5 @@
 
 
 </body>
-
-<footer></footer>
 
 </html>
