--- a/eastboston.html
+++ b/eastboston.html
@@ -33,7 +33,7 @@
             <figure class="address-figure">
                 <div class="arrow-group">
                     <img class="restaurant-arrow" src="assets/icons8-forward-arrow-64.png"/>
-                    <figcaption class="rest-image-caption"> the front of the store</figcaption>
+                    <figcaption class="rest-image-caption"> the front of the restaurant</figcaption>
                 </div>
                 <img class="restaurant-image" src="assets/el penol restaurant.png"> 
             </figure>
@@ -56,7 +56,7 @@
             <p> The restaurant has clear dividers between each table with a sanitizer at the entrance. People wait to be seated, so everyone can be enjoy their meals safely.</p>
             <figure class="inside-restaurant">
                 <img class="inside1" src="assets/IMG_1560.png">
-                <figcaption class="inside-caption"> inside of El Peñol </figcaption>
+                <figcaption class="inside-caption"> Inside of El Peñol </figcaption>
             </figure>
             <p> The first thing you will notice is the authenticity of the place with Latin music playing in the background, greeting you like you are <span>family</span> and the smell of <span>really good food.</span>  </p>
         </div>
