--- a/index.html
+++ b/index.html
@@ -42,21 +42,18 @@
             <div id="cases">Cases: </div>
             <div id="deaths">Deaths: </div>
             <div id= "vaccomp">Vaccination Completed: </div>
-            <div id= "date"> Date: </div>
+            <div id= "date"> Date (Last Updated On): </div>
         </div>   
         </div>
         <div class="stats-set1"> 
-            <p> <span>25%</span> of the Boston population is Black, <span>19.8%</span> of the Boston population is Latinx, and <span>52.8%</span> is white. </p>
-            <p>Yet, Black people make up <span>24%</span> of the reported COVID-19 cases. Latinx people make up <span>30%</span> of the cases. White people only make up <span>34%</span>. </p>
+            <p> <span>25%</span> of the Boston population is Black, <span>19.8%</span> of the Boston population is Latinx, and <span>52.8%</span> is white. Yet, Black people make up <span>24%</span> of the reported COVID-19 cases. Latinx people make up <span>30%</span> of the cases. White people only make up <span>34%</span>. </p>
         </div>
         <div class="overview-part-2">
-            <p>  Neighborhoods like Dorchester, Hyde Park, Revere, and East Boston, predominately Black & Brown neighborhoods experience higher rates of COVID-19. </p>
-            <p> The pandemic only amplified and exacerbated the real issue: <strong> access to a healthy, happy, high-quality life is not insured for communities of color.</strong> </p>
+            <p>  Neighborhoods like Dorchester, Hyde Park, Revere, and East Boston, which are predominately Black & Brown neighborhoods, experience higher rates of COVID-19. The pandemic only amplified and exacerbated the real issue: <strong> access to a healthy, happy, high-quality life is not insured for communities of color.</strong> </p>
         </div>  
         
             <div class="overview-part-3">
-                <p> Our goal is to focus on small businesses of color, many of whom financially struggle to maintain their business and face increasing uncertainty about reopening and going back to “normal.”  </p>
-                <p> This website aims to promote dialogue about the disproportionate impacts of COVID-19 on minority businesses. The goal is to spread awareness about local businesses in Boston and the greater Boston area and support them.   </p>
+                <p> Our goal is to focus on small businesses of color, many of whom financially struggle to maintain their business and face increasing uncertainty about reopening and going back to “normal.” This website aims to promote dialogue about the disproportionate impacts of COVID-19 on minority businesses. The goal is to spread awareness about local businesses in Boston and the greater Boston area and support them.   </p>
                     <blockquote> <img class="quotemark" src="assets/icons8-quote-left-100.png">
                         The pandemic’s disproportionate impact on minority-owned small businesses is further evidence of systemic inequalities in our country. Even more concerning, the pandemic could exacerbate and elongate the economic struggles already facing minority-owned businesses and families. <br> -<cite>Suzanne P. Clark, president of the U.S. Chamber</cite></div>
                     </blockquote>
