--- a/eastboston.html
+++ b/eastboston.html
@@ -82,7 +82,7 @@
          <p>El Peñol quickly closed down their restaurant to ensure everyone’s safety, especially since Marina works 7 days every week.</p>
          <p>It was hard on everyone, and Johan saw it first-hand when they only talked to his grandmother through the phone. Thankfully, El Peñol was and still is busy throughout the whole pandemic.  </p>
          <p>The Latinx community in the Boston and the greater Boston area have supported each other and the Latinx businesses. </p>
-         <blockquote class=eb-quote> <img class="quotemark" src="assets/icons8-quote-left-100.png"> Us Latinos help each other a lot and support one another. We are all here for one goal which is to give our family a better life and strive and stick together to reach that goal. <br> <cite> -Johan Medina, El Peñol’s manager and grandson of Maria.</cite> </blockquote>
+         <blockquote class=eb-quote> <img class="quotemark" src="assets/quotemark.png"> Us Latinos help each other a lot and support one another. We are all here for one goal which is to give our family a better life and strive and stick together to reach that goal. <br> <cite> -Johan Medina, El Peñol’s manager and grandson of Maria.</cite> </blockquote>
         </div> 
 
          <!-- carousel starts -->
@@ -110,7 +110,6 @@
             <ul class="rest-support-list">
                 <li class="list-support">Get your next meal at El Peñol in East Boston. </li>
                 <a class="support-button" href="http://www.elpenolrestaurante.com">Support</a>
-                
                 <li class="list-support">Donate to the Hispanic Star Relief Fund. Funds will be distributed to Latinx
                     community members and small businesses around the country in need. Click the button to donate. </li>
                 <a class="support-button" href="https://hispanicstar.org/donate/">Donate</a>
