--- a/chinatown.html
+++ b/chinatown.html
@@ -7,7 +7,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <script href="scripts/script.js" defer></script>
     <title>The Impact of COVID-19: Asian Garden Restaurant in Chinatown </title>
       <!-- for the carousel -->
       <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
@@ -113,19 +112,37 @@
             <a class="support-button" href="eastboston.html"> Learn </a> </a>
             <li class="list-support">Spread the word. Share this website on your social media. </li>
             <div class="social-media-buttons">
+                <div id="fb-share-button">
+                    <svg viewBox="0 0 12 12" preserveAspectRatio="xMidYMid meet">
+                        <path class="svg-icon-path" d="M9.1,0.1V2H8C7.6,2,7.3,2.1,7.1,2.3C7,2.4,6.9,2.7,6.9,3v1.4H9L8.8,6.5H6.9V12H4.7V6.5H2.9V4.4h1.8V2.8 c0-0.9,0.3-1.6,0.7-2.1C6,0.2,6.6,0,7.5,0C8.2,0,8.7,0,9.1,0.1z"></path>
+                    </svg>
+                    <span>Share</span>
+                </div>
+                <script>
+                    var fbButton = document.getElementById('fb-share-button');
+                    var url = "https://selinal552.github.io/covid19-impacts-on-local-businesses/";
+
+                    fbButton.addEventListener('click', function() {
+                     console.log("works");
+                     window.open('https://www.facebook.com/sharer/sharer.php?u=' + url,
+                         'facebook-share-dialog',
+                             'width=800,height=600'
+                     );
+                 return false;
+                });
+                </script>
+                <!-- <div class="fb-share-button"  
+                    data-href="https://developers.facebook.com/docs/plugins/" 
+                    data-layout="button_count" data-size="small">
+                <a target="_blank" 
+                    href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" 
+                    class="fb-xfbml-parse-ignore">Share</a>
+                </div>
                 <div id="fb-root"></div>
-                <script async defer crossorigin="anonymous"
-                        src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" nonce="05brBWaQ"></script>
-                <div class="fb-share-button"
-                        data-href="https://selinal552.github.io/covid19-impacts-on-local-businesses/eastboston.html"
-                        data-layout="button" 
-                        data-size="large">
-                        <a target="_blank"
-                        href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fselinal552.github.io%2Fcovid19-impacts-on-local-businesses%2Feastboston.html&amp;src=sdkpreparse"
-                        class="fb-xfbml-parse-ignore">Share</a></div>
-                <div id="fb-root"></div>
-                <script async defer crossorigin="anonymous"
-                        src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" nonce="LLGmSjzK"></script>
+                <script async defer crossorigin="anonymous" 
+                    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" 
+                    nonce="6NVcNkmi">
+                </script> -->
             <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large"
                     data-text="Check out this website on how locally-owned businesses in Boston have been affected by the pandemic!"
                     data-url="https://selinal552.github.io/
@@ -136,6 +153,8 @@
     </ul>
 </div>
 <div class="foo-eb blue"> </div>
+
+
 </main>
 
 <!-- for the carousel -->
@@ -144,7 +163,7 @@
 <script src="slick/slick.min.js"></script>
 <script src="scripts\carousel.js"></script>
 
-
+<script href="scripts/script.js"></script>
 </body>
 
 </html>
