--- a/chinatown.html
+++ b/chinatown.html
@@ -33,13 +33,13 @@
                     <img class="restaurant-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
                     <figcaption class="eb-rest-image-caption"> the front of the restaurant</figcaption>
                  </div>
-                <img class="eb-restaurant-image" src="assets/asian garden full rest..png" alt="outside of the restaurant, showing neon open sign"> 
+                <img class="eb-restaurant-image" src="assets/asian garden full rest_.png" alt="outside of the restaurant, showing neon open sign"> 
                 </figure>
         </div>
         <div class="to-restaurant-video"> <video width="100%" height="auto" controls muted>
             <source src="assets/asian garden video.mp4" type="video/mp4">
           Your browser does not support the video tag.
-          </video> <p class="video-description">en-route to asian garden</p></div>
+          </video> <p class="video-description">En-Route to Asian Garden</p></div>
     </header>
 
   <main>
@@ -58,7 +58,7 @@
     <div class="profile">
      <h3> About the Business Owner </h3>
      <div class="owner-pic">
-        <img class="owner" src="assets/ownerkawawstars.png" alt="picture of business owner kawa with star decorations">
+        <img class="owner" src="assets/ownerkawa.png" alt="picture of business owner kawa with star decorations">
      </div>
      <p> The owner's name of Asian Garden is KaWa. He immigrated from Hong Kong in 1993. Shortly after, he started his business and has been working with his family ever since.</p>
      <p> When I asked him why he started his restaurant, he responded,<span>“Because cooking is my passion.”</span></p>
@@ -72,7 +72,7 @@
      <div class="poc-statistics"> 
          <div class="foo5"></div>
          <h4> Reported Asian hate crimes rose to <span>150%</span> in 2020.<a href="https://www.cbsnews.com/news/asian-american-hate-crimes-up-150-percent-us/" rel="footnote">1</a> </h4> 
-         <h4><i>Stop Asian Hate</i> reported nearly 3,800 incidences of hate crimes. <a href="https://www.nbcnews.com/news/asian-america/there-were-3-800-anti-asian-racist-incidents-mostly-against-n1261257" rel="footnote">2</a></h4> 
+         <h4><i>Stop Asian Hate</i> reported nearly <span>3,800</span> incidences of hate crimes. <a href="https://www.nbcnews.com/news/asian-america/there-were-3-800-anti-asian-racist-incidents-mostly-against-n1261257" rel="footnote">2</a></h4> 
          <h4>Hate crimes are largely undercounted due to language barriers, mistrust with authorities, and reluctancy to speak up.<a href="https://abcnews.go.com/US/anti-asian-hate-incidents-unreported/story?id=76509072" rel="footnote">3</a></h4>
     </div>
      <p> In addition, KaWa has encountered acts of discrimination. People would call the restaurant to direct racial slurs and expletives at the owner. They would also order food but purposely refuse to pick it up, which resulted in wasted food and expenses.</p>
@@ -97,7 +97,7 @@
         <figure class="takeout-block">
             <img class="takeout" src="assets/IMG_3527 2.png"
                 alt="picture of walnut shrimp and stir fry beef with pepper takeout">
-            <figcaption class="take-out-caption"> Walnut shrimp and stir fry beef with peppers</figcaption>
+            <figcaption class="take-out-caption"> Walnut Shrimp and Stir Fry Beef with Peppers</figcaption>
         </figure>
         <ul class="rest-support-list">
             <li class="list-support">Get your next meal from Asian Garden. Browse their menu and order online or
@@ -131,18 +131,6 @@
                  return false;
                 });
                 </script>
-                <!-- <div class="fb-share-button"  
-                    data-href="https://developers.facebook.com/docs/plugins/" 
-                    data-layout="button_count" data-size="small">
-                <a target="_blank" 
-                    href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" 
-                    class="fb-xfbml-parse-ignore">Share</a>
-                </div>
-                <div id="fb-root"></div>
-                <script async defer crossorigin="anonymous" 
-                    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" 
-                    nonce="6NVcNkmi">
-                </script> -->
             <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large"
                     data-text="Check out this website on how locally-owned businesses in Boston have been affected by the pandemic!"
                     data-url="https://selinal552.github.io/
