--- a/chinatown.html
+++ b/chinatown.html
@@ -23,7 +23,7 @@
                 <li><a class="nav-links" href="aboutus.html">About Us</a></li>
               </ul>
         </nav>
-        <div class="name">
+        <div class="nameAG">
             <h1>Asian Garden Restaurant</h1>
         </div>
         <div class="address">
@@ -55,7 +55,7 @@
         </figure>
         <p> However, business was still stagnant, and it was clear that the small family-owned restaurant was struggling to keep up against the brunt of the pandemic and the increasing rise of Asian hate crimes. </p>
     </div>
-    <div class="profile">
+    <div class="profile ag-color">
      <h3> About the Business Owner </h3>
      <div class="owner-pic">
         <img class="owner" src="assets/ownerkawa.png" alt="picture of business owner kawa with star decorations">
@@ -64,13 +64,13 @@
      <p> When I asked him why he started his restaurant, he responded,<span>“Because cooking is my passion.”</span></p>
      <p>During our phone interview, he kindly shared his experiences with me. Occasionally, he would call out an order for the kitchen to take. I could tell he was a busy man who worked extremely hard.</p>
     </div>
-    <div class="impact">
+    <div class="impact ag-color">
      <h3> Struggling with Multiple Pandemics </h3>
      <p> During our phone interview, KaWa noted a <span>50%</span> decrease in business due to the pandemic.</p>
      <p> Although the state government provided funding to keep workers in local businesses employed through the Paycheck Protection Program (PPP), there was still not enough business to hire workers back. </p>
      <p>KaWa believes that the rise of hate crimes against Asian-Americans due to broader rhetoric about Asian-Americans being responsible for carrying the disease has contributed to the loss in revenue. </p> 
      <div class="poc-statistics"> 
-         <div class="foo5"></div>
+         <div class="foo5 ag"></div>
          <h4> Reported Asian hate crimes rose to <span>150%</span> in 2020.<a href="https://www.cbsnews.com/news/asian-american-hate-crimes-up-150-percent-us/" rel="footnote">1</a> </h4> 
          <h4><i>Stop Asian Hate</i> reported nearly <span>3,800</span> incidences of hate crimes. <a href="https://www.nbcnews.com/news/asian-america/there-were-3-800-anti-asian-racist-incidents-mostly-against-n1261257" rel="footnote">2</a></h4> 
          <h4>Hate crimes are largely undercounted due to language barriers, mistrust with authorities, and reluctancy to speak up.<a href="https://abcnews.go.com/US/anti-asian-hate-incidents-unreported/story?id=76509072" rel="footnote">3</a></h4>
@@ -92,7 +92,7 @@
 
         <!-- carousel ends -->
 
-    <div class="support">
+    <div class="support ag-color">
         <h3>Here's How You Can Help</h3>
         <figure class="takeout-block">
             <img class="takeout" src="assets/IMG_3527 2.png"
