--- a/chinatown.html
+++ b/chinatown.html
@@ -6,7 +6,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="manifest" href="site.webmanifest">
     <title>The Impact of COVID-19: Asian Garden Restaurant in Chinatown </title>
       <!-- for the carousel -->
       <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
