color to restaurant spa

--- a/chinatown.html
+++ b/chinatown.html
@@ -61,22 +61,22 @@
         <img class="owner" src="assets/ownerkawa.png" alt="picture of business owner kawa with star decorations">
      </div>
      <p> The owner's name of Asian Garden is KaWa. He immigrated from Hong Kong in 1993. Shortly after, he started his business and has been working with his family ever since.</p>
-     <p> When I asked him why he started his restaurant, he responded,<span>“Because cooking is my passion.”</span></p>
+     <p> When I asked him why he started his restaurant, he responded,<span class="ag-color">“Because cooking is my passion.”</span></p>
      <p>During our phone interview, he kindly shared his experiences with me. Occasionally, he would call out an order for the kitchen to take. I could tell he was a busy man who worked extremely hard.</p>
     </div>
     <div class="impact ag-color">
      <h3> Struggling with Multiple Pandemics </h3>
-     <p> During our phone interview, KaWa noted a <span>50%</span> decrease in business due to the pandemic.</p>
+     <p> During our phone interview, KaWa noted a <span class="ag-color">50%</span> decrease in business due to the pandemic.</p>
      <p> Although the state government provided funding to keep workers in local businesses employed through the Paycheck Protection Program (PPP), there was still not enough business to hire workers back. </p>
      <p>KaWa believes that the rise of hate crimes against Asian-Americans due to broader rhetoric about Asian-Americans being responsible for carrying the disease has contributed to the loss in revenue. </p> 
      <div class="poc-statistics"> 
          <div class="foo5 ag"></div>
-         <h4> Reported Asian hate crimes rose to <span>150%</span> in 2020.<a href="https://www.cbsnews.com/news/asian-american-hate-crimes-up-150-percent-us/" rel="footnote">1</a> </h4> 
-         <h4><i>Stop Asian Hate</i> reported nearly <span>3,800</span> incidences of hate crimes. <a href="https://www.nbcnews.com/news/asian-america/there-were-3-800-anti-asian-racist-incidents-mostly-against-n1261257" rel="footnote">2</a></h4> 
+         <h4> Reported Asian hate crimes rose to <span class="ag-color">150%</span> in 2020.<a href="https://www.cbsnews.com/news/asian-american-hate-crimes-up-150-percent-us/" rel="footnote">1</a> </h4> 
+         <h4><i>Stop Asian Hate</i> reported nearly <span class="ag-color">3,800</span> incidences of hate crimes. <a href="https://www.nbcnews.com/news/asian-america/there-were-3-800-anti-asian-racist-incidents-mostly-against-n1261257" rel="footnote">2</a></h4> 
          <h4>Hate crimes are largely undercounted due to language barriers, mistrust with authorities, and reluctancy to speak up.<a href="https://abcnews.go.com/US/anti-asian-hate-incidents-unreported/story?id=76509072" rel="footnote">3</a></h4>
     </div>
      <p> In addition, KaWa has encountered acts of discrimination. People would call the restaurant to direct racial slurs and expletives at the owner. They would also order food but purposely refuse to pick it up, which resulted in wasted food and expenses.</p>
-     <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year. Despite installing security systems, he would come back to smashed restaurant windows. KaWa has hope that Asian Garden will bounce back, but the road to normalcy will be long and stressful. </p>
+     <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span class="ag-color">three attempted robberies</span> at the restaurant in the past year. Despite installing security systems, he would come back to smashed restaurant windows. KaWa has hope that Asian Garden will bounce back, but the road to normalcy will be long and stressful. </p>
     </div> 
 
          <!-- carousel starts -->
